Add test cases on MCPJdbcTransactionResourceManagerTest